# notes-creator

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/gui/: __init__.py  main_window.py
src/services/: llm_factory.py  transcript_fetcher.py
